--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Brands/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Brands/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="col-lg-8">
             <div class="page-header-title">
                 <div class="d-inline">
-                    <h4>List Of Brands</h4>
+                    <h4>Maşın Markaları</h4>
                     @*<span>
                             lorem ipsum dolor sit amet, consectetur adipisicing
                             elit
@@ -23,7 +23,7 @@
                         <a asp-action="index" asp-controller="dashboard"> <i class="feather icon-home"></i> </a>
                     </li>
                     <li class="breadcrumb-item" style="float: left;">
-                        <a href="#!">Brands</a>
+                        <a href="#!">Markalar</a>
                     </li>
                 </ul>
             </div>
