--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -399,7 +399,7 @@
                                 <li class="">
                                     <a asp-controller="dashboard" asp-action="index">
                                         <span class="pcoded-micon"><i class="feather icon-home"></i></span>
-                                        <span class="pcoded-mtext">Dashboard</span>
+                                        <span class="pcoded-mtext">Ana Səhifə</span>
                                     </a>
                                 </li>
                                 @if (User.HasAccess("admin.brands.index"))
