--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Brands/Edit.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Brands/Edit.cshtml
@@ -9,11 +9,8 @@
         <div class="col-lg-8">
             <div class="page-header-title">
                 <div class="d-inline">
-                    <h4>Brand</h4>
-                    @*<span>
-                            lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit
-                        </span>*@
+                    <h4>Marka</h4>
+                   
                 </div>
             </div>
         </div>
@@ -24,7 +21,7 @@
                         <a asp-action="index" asp-controller="dashboard"> <i class="feather icon-home"></i> </a>
                     </li>
                     <li class="breadcrumb-item" style="float: left;">
-                        <a href="#!">Brand</a>
+                        <a href="#!">Marka</a>
                     </li>
                 </ul>
             </div>
