--- a/Auto-Part/Auto-Part-WebUI/Views/Account/Register.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Account/Register.cshtml
@@ -56,7 +56,7 @@
                                         <input class="form-control" asp-for="PhoneNumber" placeholder="Mobil Nömrə *" />
                                     </div>
                                     <div class="form-group">
-                                        <input class="form-control" asp-for="StoreName" placeholder="Mağaza adı (Onlayn Mağazadısa Sosial şəbəkədə adı) *" />
+                                        <input class="form-control" asp-for="StoreName" placeholder="Mağaza adı (Sosial şəbəkədə adı) *" />
                                     </div>
                                     <div class="form-group">
                                         <input class="form-control" asp-for="Adress" placeholder="Mağaza ünvanı *" />
@@ -65,7 +65,7 @@
                                         <input class="form-control" asp-for="Password" placeholder="Şifrə *" />
                                     </div>
                                     <div class="form-group">
-                                        <input class="form-control" asp-for="ConfirmPassword" placeholder="Şifrənin Təkrarını yazın zəhmət olmasa *" />
+                                        <input class="form-control" asp-for="ConfirmPassword" placeholder="Şifrənin Təkrarını daxil edin *" />
                                     </div>
                                     <div class="form-footer">
                                         <div class="form-checkbox">
