--- a/Auto-Part/Auto-Part-WebUI/Views/Home/About.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Home/About.cshtml
@@ -8,12 +8,12 @@
                                 </figure>
                             </div>
                             <div class="col-md-5 mb-4">
-                                <h5 class="section-subtitle lh-2 ls-md font-weight-normal">Müştəri məmnuniyyəti</h5>
-                                <h3 class="section-title lh-1 font-weight-bold">Keyfiyyətli məhsullarin satışı və<br>istəyə görə sifarişi
+                                <h5 class="section-subtitle lh-2 ls-md font-weight-normal">Sifariş</h5>
+                                <h3 class="section-title lh-1 font-weight-bold">Keyfiyyətli məhsulların <br>Satışı ,  <br>İstəyə görə xaricdən sifarişi<br> qəbul olunur
                                     </h3>
                                 <p class="section-desc text-grey">
                                     Çoxlu sayda müştəri ilə böyüməyə və
-                                    inkişaf etməyə davam edirik <br>
+                                    inkişaf etməyə davam edirik . Müştəri məmnuniyyəti bizim üçün önəmlidir <br>
                                     Məhsulları görmək üçün klikləyin
                                 </p>
                                 <a asp-action="index" asp-controller="shop" class="btn btn-dark btn-link btn-underline ls-m">Məhsullara baxın<i
@@ -28,15 +28,15 @@
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="col-md-6 order-md-first mb-4">
-                                <h5 class="section-subtitle lh-2 ls-md font-weight-normal mb-1">03. Our Store</h5>
-                                <h3 class="section-title lh-1 font-weight-bold">Expect Restless<br>Amazing Support</h3>
+                                <h3 class="section-title lh-1 font-weight-bold">Sürətli Çatdırılma</h3>
                                 <p class="section-desc text-grey">
-                                    Already millions of people are very satisfied by thi.<br>
-                                    s page builder and the number is growing more and more. Technolog<br>
-                                    developing, requirements are increasing. Riode has brought.
+                                    Sifariş olunan məhsulların <br>
+                                    Sürətli şəkildə çatdırılması <br>
+                                    
                                 </p>
-                                <a href="~/assets/#" class="btn btn-dark btn-link btn-underline ls-m">Get Our Store<i
-                                        class="d-icon-arrow-right"></i></a>
+                                <a asp-action="index" asp-controller="shop" class="btn btn-dark btn-link btn-underline ls-m">
+                                    Məhsullara baxın<i class="d-icon-arrow-right"></i>
+                                </a>
                             </div>
                             <div class="col-md-6 mb-4">
                                 <figure>
@@ -51,8 +51,7 @@
 
                 <section class="brand-section grey-section pt-10 pb-10 appear-animate">
                     <div class="container mt-8 mb-10">
-                        <h5 class="section-subtitle lh-2 ls-md font-weight-normal mb-1 text-center">04. Our Clients</h5>
-                        <h3 class="section-title lh-1 font-weight-bold text-center mb-5">Popular Brands</h3>
+                        <h3 class="section-title lh-1 font-weight-bold text-center mb-5">Populyar Məhsullar</h3>
                         <div class="owl-carousel owl-theme row cols-xl-6 cols-lg-5 cols-md-4 cols-sm-3 cols-2"
                             data-owl-options="{
                             'nav': false,
@@ -78,22 +77,22 @@
                             }
                         }">
                             <figure class="brand-wrap bg-white banner-radius">
-                                <img src="~/assets/images/brands/1.png" alt="Brand" width="180" height="100" />
+                                <img src="~/assets/images/frfrf.jpg" alt="Brand" width="180" height="100" />
                             </figure>
                             <figure class="brand-wrap bg-white banner-radius">
-                                <img src="~/assets/images/brands/2.png" alt="Brand" width="180" height="100" />
+                                <img src="~/assets/images/babin.jpg" alt="Brand" width="180" height="100" />
                             </figure>
                             <figure class="brand-wrap bg-white banner-radius">
-                                <img src="~/assets/images/brands/3.png" alt="Brand" width="180" height="100" />
+                                <img src="~/assets/images/almaa.jpg" alt="Brand" width="180" height="100" />
                             </figure>
                             <figure class="brand-wrap bg-white banner-radius">
-                                <img src="~/assets/images/brands/4.png" alt="Brand" width="180" height="100" />
+                                <img src="~/assets/images/linq.jpg" alt="Brand" width="180" height="100" />
                             </figure>
                             <figure class="brand-wrap bg-white banner-radius">
-                                <img src="~/assets/images/brands/5.png" alt="Brand" width="180" height="100" />
+                                <img src="~/assets/images/sveca.jpg" alt="Brand" width="180" height="100" />
                             </figure>
                             <figure class="brand-wrap bg-white banner-radius">
-                                <img src="~/assets/images/brands/6.png" alt="Brand" width="180" height="100" />
+                                <img src="~/assets/images/salnik.jpg" alt="Brand" width="180" height="100" />
                             </figure>
                         </div>
                     </div>
