--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Basket.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Basket.cshtml
@@ -12,9 +12,9 @@
                 <div class="emptyBasketContainer">
                     @if (Model.Count == 0)
                     {
-                        <div class="d-flex flex-column justify-content-center align-items-center">
+                        <div  class="d-flex flex-column justify-content-center align-items-center">
                             <i class="emptyBasket fa-solid fa-cart-shopping"></i>
-                            <h1 class="emptyBasketText">Your Cart is empty</h1>
+                            <h1 class="emptyBasketText">Səbətiniz Boşdur</h1>
                         </div>
                     }
                 </div>
